--- a/hci.css
+++ b/hci.css
@@ -1,7 +1,12 @@
 /* Basic Styles */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f4f7f6;
+    /* background-color: #f4f7f6; */
+    background-image: url(1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     padding: 7px;
     padding-bottom: 50px;
     margin: 0;
@@ -11,39 +16,44 @@ body {
   }
   
   h2 {
-    color: #2c3e50;
+    color: #177ce1;
     text-align: center;
     font-size: 2em;
     margin-bottom: 30px;
     border-radius: 20px 0px 20px ;
-    box-shadow:  10px 10px 10px  rgba(20, 115, 187, 0.466);
+    box-shadow:  10px 10px 10px  rgba(20, 115, 187, 0.262);
   }
   
   /* Container Style */
   .quiz-container {
-    background: white;
+    background: rgba(255, 255, 255, 0.893);
     padding: 30px;
     border-radius: 12px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
     max-width: 900px;
     margin: auto;
+    
   }
   
   /* Question Styling */
   .question {
     margin-bottom: 25px;
     
+    
+    
   }
   
   .question p {
     font-size: 1.1em;
-    color: #34495e;
+    color: #177ce1;
     line-height: 1.5;
-    border-radius: 20px 0px 20px ;
-    box-shadow:1px 1px 1px 1px   rgba(114, 159, 194, 0.466);
+    border-top: 2px #503b2c;
+    border-radius:  20px 0px 20px ;
+    box-shadow:  10px 10px 10px  rgba(20, 115, 187, 0.262);
   }
   
   .question i {
+    
     font-size: 1em;
     color: #7f8c8d;
     
@@ -65,8 +75,8 @@ body {
     font-size: 1.1em;
     color: #1964af;
     cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px 10px  rgba(114, 159, 194, 0.466);}
+    border-radius: 20px 0px 20px ;
+    box-shadow:  10px 10px 10px  rgba(20, 115, 187, 0.262);}
   
   
   /* Style for Buttons */
