--- a/hci.css
+++ b/hci.css
@@ -1,12 +1,12 @@
 /* Basic Styles */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* background-color: #f4f7f6; */
-    background-image: url(1.jpg);
+    background-color: #f4f7f6;
+    /* background-image: url(1.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     padding: 7px;
     padding-bottom: 50px;
     margin: 0;
